<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plan2gather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_function">Function</string>
    <string name="action_settings">Settings</string>

    <!-- Content Description -->
    <string name="desc_menu_items_icon">Menu icon</string>

    <!-- Sliding menu items -->
    <string-array name="slide_menu_items">
        <item>Calender</item>
        <item>Socle</item>
        <item>Profile</item>
        <item>Setting</item>
    </string-array>

    <!-- Sliding menu item icons -->
    <!-- Keep in order with title items -->
    <array name="slide_menu_icons">
        <item>@drawable/ic_calender</item>
        <item>@drawable/ic_socle</item>
        <item>@drawable/ic_profile</item>
        <item>@drawable/ic_settings</item>
    </array>

    <!-- Registration page -->
    <string name="title_activity_login">Registration</string>

    <!-- Strings related to login -->
    <string name="ask_for_number">Please enter your phone number</string>
    <string name="prompt_number">Mobile phone number</string>
    <string name="register_button">Register</string>
    <string name="error_invalid_number">This number is invalid</string>
    <string name="error_field_required">This field is required</string>

    <!-- Profile page -->
    <string name="introduce">Screen name:</string>
    <string name="change_propic">Change screen name</string>

    <!-- Calendar related -->
    <string name="arrow_left">Arrow left</string>
    <string name="arrow_right">Arrow right</string>
    <string name="dash"> - </string>

    <!-- Event related -->
    <string name="eName">Event Name:</string>
    <string name="eStart">Start:</string>
    <string name="eEnd">End:</string>
    <string name="eDesc">Description:</string>
    <string name="ePlace">Location:</string>
    <string name="eRepeat">Repetition:</string>
    <string name="eParti">Participant:</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="createEvent">Create Event</string>
    <string name="editEvent">Edit Event</string>

    <!-- Socle -->
    <string name="picDesc">ProPic</string>
    <string name="title_activity_add_socle">AddSocle</string>
    <string name="addNumber">Target Number:</string>
    <string name="cImport">From contect..</string>
    <string name="sCreate">Add socle</string>

</resources>