<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/addNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNumber" />

    <Button
        android:id="@+id/cImport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/cImport" />

    <Button
        android:id="@+id/sCreate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:onClick="onPickContact"
        android:text="@string/sCreate" />

</LinearLayout>