<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ask_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/ask_for_number"
        android:textSize="20sp" >
    </TextView>

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/prompt_number"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/register_button" />

</LinearLayout>